  - GT-157, postgis_sfcgal: Add ST_ExtrudeStraightSkeleton (Loïc Bartoletti)
  - #5496, ST_Clip support for touched (Regina Obe)
  - GH-760, postgis_sfcgal: CG_Intersection, CG_3DIntersects, CG_Intersects,
            CG_Difference, CG_Union (and aggregate), CG_Triangulate, CG_Area,
            CG_3DDistance, CG_Distance (Loïc Bartoletti)

* Enhancements *

  - #3587, faster load of big lines in topologies (Sandro Santilli)
  - #5670, faster ST_CreateTopoGeo (Sandro Santilli)
  - #5531, documentation format upgraded to DocBook 5 (Sandro Santilli)
  - #5543, allow building without documentation (Sandro Santilli)
  - #5596, GH-749, Allow promoting column as an id
          in ST_AsGeoJson(record,..). (Jan Tojnar)
  - GH-744, Don't create docbook.css for the HTML manual,
            use style.css instead (Chris Mayo)
  - Faster implementation of point-in-poly cached index (Paul Ramsey)
  - Improve performance of ST_GeneratePoints (Paul Ramsey)
  - #5361, ST_CurveN, ST_NumCurves and consistency in
           accessors on curved geometry (Paul Ramsey)
  - GH-761, postgis_sfcgal: Add an optional parameter to CG_StraightSkeleton
            (was ST_StraightSkeleton) to use m as a distance in result (Hannes Janetzek, Loïc Bartoletti)


PostGIS 3.4.0
2023/08/15

This version requires PostgreSQL 12-16, GEOS 3.6 or higher, and Proj 6.1+.
To take advantage of all features, GEOS 3.12+ is needed.
To take advantage of all SFCGAL featurs, SFCGAL 1.4.1+ is needed.

Many thanks to our translation teams, in particular:

Teramoto Ikuhiro (Japanese Team)
Vincent Bre (French Team)

There are 2 new ./configure switches:

 -  --disable-extension-upgrades-install, will skip installing all the extension upgrade scripts except for the ANY--currentversion. If you use this, you can install select upgrades using the postgis commandline tool
 -  --without-pgconfig, will build just the commandline tools
    raster2pgsql and shp2pgsql even if PostgreSQL is not installed

* New Features *