@@ -47,6 +47,8 @@ To take advantage of all SFCGAL featurs, SFCGAL 1.5.0+ is needed.
   - GH-760, postgis_sfcgal: CG_Intersection, CG_3DIntersects, CG_Intersects,
             CG_Difference, CG_Union (and aggregate), CG_Triangulate, CG_Area,
             CG_3DDistance, CG_Distance (Loïc Bartoletti)
+  - #5687, Don't rely on search_path to determine postgis schema
+           Fix for PG17 security change (Regina Obe)
 
 * Enhancements *
 
